# ChangeLog for virtual/libgudev
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/libgudev/ChangeLog,v 1.16 2015/06/10 02:45:13 floppym Exp $

  10 Jun 2015; Mike Gilbert <floppym@gentoo.org> libgudev-215-r2.ebuild:
  Add slot to dev-libs/libgudev.

*libgudev-215-r2 (10 Jun 2015)

  10 Jun 2015; Mike Gilbert <floppym@gentoo.org> +libgudev-215-r2.ebuild:
  Add dev-libs/libgudev

*libgudev-215-r1 (06 Aug 2014)

  06 Aug 2014; Michał Górny <mgorny@gentoo.org> +libgudev-215-r1.ebuild,
  -libgudev-215.ebuild:
  Revbump to ensure that users get rebuild due to USE=systemd rather than
  blocker against it, and to ensure that previous breakage with USE=systemd
  ,static-libs does not persist.

  04 Aug 2014; Michał Górny <mgorny@gentoo.org> libgudev-215.ebuild:
  Fix not installing anything with USE=systemd,static-libs. That combination
  should be forbidden via REQUIRED_USE.

  03 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> libgudev-215.ebuild:
  Help Portage make the right decision by introducing USE="systemd" wrt #515230.
  This is a bug in the Package Manager.

  30 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> -libgudev-208.ebuild:
  old

*libgudev-215 (29 Jul 2014)

  29 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> +libgudev-215.ebuild:
  New virtual version wrt #518416 for package managers with no proper in-place
  dependency handling.

  25 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  systemd@g.o to maintainers.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> libgudev-208.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

  09 Jun 2014; Mike Frysinger <vapier@gentoo.org> libgudev-208.ebuild:
  Mark arm64/m68k/s390/sh stable.

  02 Jun 2014; Samuli Suominen <ssuominen@gentoo.org> libgudev-208.ebuild:
  Accept =sys-fs/udev-208-r1 as a multilib libgudev-1.0 provider.
