@@ -1,6 +1,11 @@
 # ChangeLog for virtual/libgudev
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/libgudev/ChangeLog,v 1.16 2015/06/10 02:45:13 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/libgudev/ChangeLog,v 1.17 2015/06/10 12:43:46 floppym Exp $
+
+*libgudev-215-r3 (10 Jun 2015)
+
+  10 Jun 2015; Mike Gilbert <floppym@gentoo.org> +libgudev-215-r3.ebuild:
+  Add default value for introspection on udev/systemd deps.
 
   10 Jun 2015; Mike Gilbert <floppym@gentoo.org> libgudev-215-r2.ebuild:
   Add slot to dev-libs/libgudev.
